--- a/kitesurfing/pom.xml
+++ b/kitesurfing/pom.xml
@@ -8,14 +8,14 @@
 		<version>2.1.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.kite</groupId>
-	<artifactId>kite</artifactId>
+	<groupId>app</groupId>
+	<artifactId>kitesurfing</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>kite</name>
-	<description>Demo project for Spring Boot</description>
+	<name>kitesurfing</name>
+	<description>KiteSurfing Api</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -26,10 +26,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
