--- a/kitesurfing/src/main/resources/application.properties
+++ b/kitesurfing/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.h2.console.enabled=true
-spring.datasource.name=api-database
+# control the java code db initialization (hibernate and seeder)
+api-kitesurfing.db=false
+spring.jpa.hibernate.ddl-auto=none
+
+# control the sql db initialization (from schema.sql and data.sql)
+spring.datasource.initialize=true
