--- a/RestfulAPI/pom.xml
+++ b/RestfulAPI/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>resources</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>resources</name>
-    <description>Kite Surfing API restful homework for AB4 System Internship</description>
+    <description>Kite Surfing API AB4 Systems</description>
 
     <properties>
         <java.version>11</java.version>
@@ -30,10 +30,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web-services</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
